Add Cart and product rest resource.
