# src/main/resources/swagger/biskot.yaml
@@ -14,9 +14,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Cart'
-  /products:
+  /products/{page}:
     get:
       summary: Retrieve the list of products
+      parameters:
+        - name: page
+          in: path
+          description: Page number
+          required: true
+          schema:
+            type: integer
       responses:
         '200':
           description: List of products
